--- a/LivingDesign/View/History.storyboard
+++ b/LivingDesign/View/History.storyboard
@@ -15,20 +15,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-0A-7ut">
-                                <rect key="frame" x="20" y="106" width="374" height="756"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c4S-0A-7ut">
+                                <rect key="frame" x="20" y="108" width="374" height="694"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="114" id="0tr-Ye-fvE" customClass="HistoryTabelViewCell" customModule="LivingDesign" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="114"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HistoryCell" rowHeight="148" id="0tr-Ye-fvE" customClass="HistoryTabelViewCell" customModule="LivingDesign" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="148"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0tr-Ye-fvE" id="KJ1-7e-e7F">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="114"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="148"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1BT-su-UDZ">
-                                                    <rect key="frame" x="16" y="7" width="103" height="100"/>
+                                                    <rect key="frame" x="20" y="7" width="103" height="134"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="1BT-su-UDZ" secondAttribute="height" multiplier="103:100" id="8uI-lT-XXF"/>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="103" id="b7A-RH-xwY"/>
@@ -36,7 +35,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfq-Ax-Zn2">
-                                                    <rect key="frame" x="-44" y="21" width="0.0" height="21"/>
+                                                    <rect key="frame" x="143" y="21" width="47.5" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="uau-wU-YPY"/>
                                                     </constraints>
@@ -45,7 +44,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="25Y-ix-QK3">
-                                                    <rect key="frame" x="-44" y="56" width="0.0" height="20"/>
+                                                    <rect key="frame" x="143" y="52" width="183" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="cMm-Bt-iye"/>
                                                     </constraints>
@@ -54,7 +53,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="QLN-Hd-Zu0">
-                                                    <rect key="frame" x="127" y="59" width="36" height="35"/>
+                                                    <rect key="frame" x="143" y="93" width="36" height="35"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="35" id="8yX-5z-Ks6"/>
                                                     </constraints>
@@ -66,14 +65,12 @@
                                                 <constraint firstItem="1BT-su-UDZ" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="-4" id="6bi-OO-Gk2"/>
                                                 <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="10" id="6wk-Py-Izd"/>
                                                 <constraint firstItem="25Y-ix-QK3" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="8Yk-8D-H0s"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Kfq-Ax-Zn2" secondAttribute="trailing" constant="28" id="A2U-Sp-RLf"/>
                                                 <constraint firstItem="1BT-su-UDZ" firstAttribute="centerY" secondItem="KJ1-7e-e7F" secondAttribute="centerY" id="OJv-oY-xfg"/>
-                                                <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="Qwx-WG-9eM"/>
-                                                <constraint firstItem="QLN-Hd-Zu0" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="8" id="Wcn-gz-tM6"/>
+                                                <constraint firstItem="Kfq-Ax-Zn2" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="OLv-Zf-SSP"/>
+                                                <constraint firstItem="QLN-Hd-Zu0" firstAttribute="leading" secondItem="1BT-su-UDZ" secondAttribute="trailing" constant="20" id="Wcn-gz-tM6"/>
                                                 <constraint firstItem="1BT-su-UDZ" firstAttribute="centerY" secondItem="KJ1-7e-e7F" secondAttribute="centerY" id="YSd-gz-XY3"/>
-                                                <constraint firstItem="25Y-ix-QK3" firstAttribute="top" secondItem="KJ1-7e-e7F" secondAttribute="topMargin" constant="45" id="fms-yj-pDl"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="25Y-ix-QK3" secondAttribute="trailing" constant="28" id="gpR-Pj-gVD"/>
-                                                <constraint firstItem="1BT-su-UDZ" firstAttribute="leading" secondItem="KJ1-7e-e7F" secondAttribute="leading" constant="16" id="rIW-mF-soC"/>
+                                                <constraint firstItem="25Y-ix-QK3" firstAttribute="top" secondItem="Kfq-Ax-Zn2" secondAttribute="bottom" constant="10" id="qz2-mT-QUz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -89,25 +86,50 @@
                                     <outlet property="delegate" destination="IgY-AR-ZAm" id="IAK-4u-vcj"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="履歴一覧" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYu-tq-0W7">
-                                <rect key="frame" x="20" y="44" width="374" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="履歴一覧" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYu-tq-0W7">
+                                <rect key="frame" x="158.5" y="44" width="97.5" height="29"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="Fnr-iL-dve"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugf-5S-3mR">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugf-5S-3mR">
                                 <rect key="frame" x="343" y="68" width="38" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.55294117649999996" green="0.69803921570000005" blue="0.1215686275" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="mEO-0E-O6e"/>
+                                    <constraint firstAttribute="width" constant="38" id="ys8-Lc-adB"/>
+                                </constraints>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="↑↓">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tya-Qe-4FL" customClass="Footer" customModule="LivingDesign" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="812" width="414" height="84"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="CvR-Kz-1UI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="c4S-0A-7ut" firstAttribute="top" secondItem="ugf-5S-3mR" secondAttribute="bottom" constant="10" id="5Bg-Rn-iKK"/>
+                            <constraint firstItem="tya-Qe-4FL" firstAttribute="top" secondItem="c4S-0A-7ut" secondAttribute="bottom" constant="10" id="El5-tV-4gq"/>
+                            <constraint firstItem="ugf-5S-3mR" firstAttribute="top" secondItem="VHO-ZL-7vO" secondAttribute="top" constant="24" id="M4S-Sg-6qt"/>
+                            <constraint firstItem="VHO-ZL-7vO" firstAttribute="trailing" secondItem="tya-Qe-4FL" secondAttribute="trailing" id="Wsk-Xd-s04"/>
+                            <constraint firstAttribute="bottom" secondItem="tya-Qe-4FL" secondAttribute="bottom" id="aD2-PD-4I9"/>
+                            <constraint firstItem="xYu-tq-0W7" firstAttribute="centerX" secondItem="giy-g4-a3U" secondAttribute="centerX" id="cY7-NL-blT"/>
+                            <constraint firstItem="VHO-ZL-7vO" firstAttribute="trailing" secondItem="c4S-0A-7ut" secondAttribute="trailing" constant="20" id="dhI-7I-T4n"/>
+                            <constraint firstItem="VHO-ZL-7vO" firstAttribute="trailing" secondItem="ugf-5S-3mR" secondAttribute="trailing" constant="33" id="gmc-ff-5wm"/>
+                            <constraint firstItem="xYu-tq-0W7" firstAttribute="top" secondItem="VHO-ZL-7vO" secondAttribute="top" id="o09-Xp-WCB"/>
+                            <constraint firstItem="tya-Qe-4FL" firstAttribute="leading" secondItem="VHO-ZL-7vO" secondAttribute="leading" id="pTn-ka-lkt"/>
+                            <constraint firstItem="c4S-0A-7ut" firstAttribute="leading" secondItem="VHO-ZL-7vO" secondAttribute="leading" constant="20" id="ssY-nP-NUP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="VHO-ZL-7vO"/>
                     </view>
                     <connections>
