--- a/LivingDesign/View/Home.storyboard
+++ b/LivingDesign/View/Home.storyboard
@@ -16,66 +16,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0o-bA-Ouj">
-                                <rect key="frame" x="267" y="40" width="50" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.55294117647058827" green="0.69803921568627447" blue="0.12156862745098039" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="追加">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRy-rv-gCG">
-                                <rect key="frame" x="25" y="64" width="364" height="30"/>
+                                <rect key="frame" x="20" y="64" width="374" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="yG5-4z-lfE"/>
+                                    <constraint firstAttribute="height" constant="30" id="be8-tE-peL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="krB-6x-gLi">
-                                <rect key="frame" x="30" y="119" width="354" height="743"/>
+                                <rect key="frame" x="20" y="119" width="374" height="683"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mxr-9s-cQp">
-                                    <size key="itemSize" width="131" height="136"/>
+                                    <size key="itemSize" width="131" height="164"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="lOt-fs-0fQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="131" height="136"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="131" height="164"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RCr-IS-LFF">
-                                            <rect key="frame" x="0.0" y="0.0" width="131" height="136"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="131" height="164"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jvJ-25-DnC">
-                                                    <rect key="frame" x="-0.5" y="8" width="131" height="86"/>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qhU-Vt-rtD">
-                                                    <rect key="frame" x="0.0" y="99" width="131" height="37"/>
+                                                    <rect key="frame" x="37" y="128" width="57" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="K8l-Bw-011"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jvJ-25-DnC">
+                                                    <rect key="frame" x="15.5" y="8" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="jvJ-25-DnC" secondAttribute="height" multiplier="1:1" id="A4u-zD-bxC"/>
+                                                        <constraint firstAttribute="height" constant="100" id="jNg-Ja-bl9"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="jvJ-25-DnC" secondAttribute="trailing" constant="0.5" id="9Nc-im-STt"/>
-                                                <constraint firstAttribute="trailing" secondItem="qhU-Vt-rtD" secondAttribute="trailing" id="G6u-bj-pvL"/>
-                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="leading" secondItem="RCr-IS-LFF" secondAttribute="leading" id="KRh-BT-0Di"/>
-                                                <constraint firstItem="jvJ-25-DnC" firstAttribute="top" secondItem="RCr-IS-LFF" secondAttribute="top" constant="8" id="UOD-sd-spm"/>
-                                                <constraint firstAttribute="bottom" secondItem="qhU-Vt-rtD" secondAttribute="bottom" id="eIQ-mc-lhm"/>
-                                                <constraint firstAttribute="bottom" secondItem="jvJ-25-DnC" secondAttribute="bottom" constant="42" id="jP9-OO-Rbw"/>
-                                                <constraint firstItem="jvJ-25-DnC" firstAttribute="leading" secondItem="RCr-IS-LFF" secondAttribute="leading" constant="-0.5" id="w9v-g2-ss5"/>
-                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="top" secondItem="jvJ-25-DnC" secondAttribute="bottom" constant="5" id="xv5-UH-ZJZ"/>
+                                                <constraint firstItem="jvJ-25-DnC" firstAttribute="centerX" secondItem="RCr-IS-LFF" secondAttribute="centerX" id="QkI-iU-2i7"/>
+                                                <constraint firstAttribute="bottom" secondItem="qhU-Vt-rtD" secondAttribute="bottom" constant="1" id="Tvd-No-Lzb"/>
+                                                <constraint firstItem="qhU-Vt-rtD" firstAttribute="centerX" secondItem="RCr-IS-LFF" secondAttribute="centerX" id="qmR-zf-Lrg"/>
+                                                <constraint firstItem="jvJ-25-DnC" firstAttribute="top" secondItem="RCr-IS-LFF" secondAttribute="top" constant="8" id="zYx-Eg-qQm"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <size key="customSize" width="131" height="136"/>
+                                        <size key="customSize" width="131" height="164"/>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -83,25 +77,54 @@
                                     <outlet property="delegate" destination="qv8-ee-q9t" id="oOJ-ox-l6t"/>
                                 </connections>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PHm-Uy-EWe">
-                                <rect key="frame" x="339" y="40" width="50" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PHm-Uy-EWe">
+                                <rect key="frame" x="339" y="64" width="50" height="30"/>
                                 <color key="backgroundColor" red="0.55137425659999995" green="0.6991565824" blue="0.1212733015" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Jkd-3P-2t6"/>
+                                    <constraint firstAttribute="height" constant="30" id="pJX-Xa-65p"/>
+                                </constraints>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="削除">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K0o-bA-Ouj">
+                                <rect key="frame" x="269" y="64" width="50" height="30"/>
+                                <color key="backgroundColor" red="0.55294117647058827" green="0.69803921568627447" blue="0.12156862745098039" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="EU8-po-BZI"/>
+                                    <constraint firstAttribute="height" constant="30" id="V5f-cY-X8H"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="追加">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MwX-pN-rqw" customClass="Footer" customModule="LivingDesign" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="812" width="414" height="84"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="8EJ-WW-i6s"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="krB-6x-gLi" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="30" id="34H-y1-utc"/>
-                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="dRy-rv-gCG" secondAttribute="trailing" constant="25" id="7yi-Hs-hPB"/>
-                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="krB-6x-gLi" secondAttribute="trailing" constant="30" id="Gzz-sN-TLX"/>
-                            <constraint firstItem="krB-6x-gLi" firstAttribute="bottom" secondItem="EkR-Ua-mdL" secondAttribute="bottom" id="NIu-uQ-uph"/>
-                            <constraint firstItem="krB-6x-gLi" firstAttribute="top" secondItem="dRy-rv-gCG" secondAttribute="bottom" constant="25" id="XFz-CI-dTl"/>
-                            <constraint firstItem="dRy-rv-gCG" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="25" id="ooC-sb-dDW"/>
-                            <constraint firstItem="dRy-rv-gCG" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="ybX-UR-qP5"/>
+                            <constraint firstItem="PHm-Uy-EWe" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="DGd-84-fc2"/>
+                            <constraint firstItem="MwX-pN-rqw" firstAttribute="trailing" secondItem="EkR-Ua-mdL" secondAttribute="trailing" id="DsD-ey-uzX"/>
+                            <constraint firstItem="dRy-rv-gCG" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="20" id="Hy1-cm-m2P"/>
+                            <constraint firstItem="K0o-bA-Ouj" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="KEe-u4-GGO"/>
+                            <constraint firstItem="MwX-pN-rqw" firstAttribute="top" secondItem="krB-6x-gLi" secondAttribute="bottom" constant="10" id="hZY-19-Nrx"/>
+                            <constraint firstAttribute="bottom" secondItem="MwX-pN-rqw" secondAttribute="bottom" id="hdS-nr-ZeE"/>
+                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="dRy-rv-gCG" secondAttribute="trailing" constant="20" id="iS5-Yp-w5C"/>
+                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="krB-6x-gLi" secondAttribute="trailing" constant="20" id="mIN-so-6V5"/>
+                            <constraint firstItem="PHm-Uy-EWe" firstAttribute="leading" secondItem="K0o-bA-Ouj" secondAttribute="trailing" constant="20" id="mS7-Xm-I9O"/>
+                            <constraint firstItem="EkR-Ua-mdL" firstAttribute="trailing" secondItem="PHm-Uy-EWe" secondAttribute="trailing" constant="25" id="nJ3-Dc-8pv"/>
+                            <constraint firstItem="krB-6x-gLi" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" constant="20" id="tAW-Fi-Vh3"/>
+                            <constraint firstItem="dRy-rv-gCG" firstAttribute="top" secondItem="EkR-Ua-mdL" secondAttribute="top" constant="20" id="xZK-jj-Hpv"/>
+                            <constraint firstItem="MwX-pN-rqw" firstAttribute="leading" secondItem="EkR-Ua-mdL" secondAttribute="leading" id="xfo-t4-OPs"/>
+                            <constraint firstItem="krB-6x-gLi" firstAttribute="top" secondItem="dRy-rv-gCG" secondAttribute="bottom" constant="25" id="yiB-aL-Nzq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EkR-Ua-mdL"/>
                     </view>
