--- a/LivingDesign/View/History.storyboard
+++ b/LivingDesign/View/History.storyboard
@@ -119,7 +119,7 @@
                                     <constraint firstAttribute="height" constant="45" id="mBj-hL-C12"/>
                                 </constraints>
                                 <items>
-                                    <navigationItem title="History" id="H5s-OP-04r">
+                                    <navigationItem title="履歴" id="H5s-OP-04r">
                                         <barButtonItem key="rightBarButtonItem" title="↑↓" id="8Kr-vq-WfQ"/>
                                     </navigationItem>
                                 </items>
